[package]
name = "esp32-rs-mqtt-displays"
version = "0.1.0"
authors = ["Levy Barbosa <marcio.levy20@gmail.com>"]
edition = "2021"

[[bin]]
name = "esp32-rs-mqtt-displays"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = "1.0.91"
esp-idf-svc = "0.49.1"
log = "0.4.22"
tokio = { version = "1.41.0", features = ["rt", "time"] }

[build-dependencies]
embuild = "0.32.0"
